--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Pink Lake Café</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header class="header">
@@ -26,7 +26,9 @@
         <section id="home" class="home">
             <h2>Welcome to The Pink Lake Café</h2>
             <p>Enjoy our delicious coffee and crepes in a cozy atmosphere inspired by nature.</p>
+            <img src="./alviso-ponds.jpeg" alt="Alviso pink salt ponds">
         </section>
+        
         <section id="menu" class="menu">
             <h2>Our Menu</h2>
             <ul>
