--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="home" class="home">
             <h2>Welcome to The Pink Lake Café</h2>
             <p>Enjoy our delicious coffee and crepes in a cozy atmosphere inspired by nature.</p>
-            <img src="./alviso-ponds.jpeg" alt="Alviso pink salt ponds">
+            <img src="./alviso-pink-ponds.jpg" alt="Alviso pink salt ponds" class="responsive-image">
         </section>
         
         <section id="menu" class="menu">
