--- a/index.html
+++ b/index.html
@@ -1,56 +1,47 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Pink Lake Café</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Coming Soon</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background: linear-gradient(135deg, #00bcd4, #4a148c);
+            font-family: 'Arial', sans-serif;
+            color: #ffffff;
+            text-align: center;
+        }
+
+        .container {
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        h1 {
+            font-size: 4rem;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 1.5rem;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+    </style>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <h1>The Pink Lake Café</h1>
-            <p>Inspired by the beauty of the Alviso salt ponds.</p>
-        </div>
-    </header>
-    <nav class="navbar">
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section id="home" class="home">
-            <h2>Welcome to The Pink Lake Café</h2>
-            <p>Enjoy our delicious coffee and crepes in a cozy atmosphere inspired by nature.</p>
-            <img src="./alviso-pink-ponds.jpg" alt="Alviso pink salt ponds" class="responsive-image">
-        </section>
-        
-        <section id="menu" class="menu">
-            <h2>Our Menu</h2>
-            <ul>
-                <li><strong>Espresso:</strong> Rich and bold coffee</li>
-                <li><strong>Latte:</strong> Smooth and creamy</li>
-                <li><strong>Nutella Crepe:</strong> A classic favorite</li>
-                <li><strong>Strawberry Crepe:</strong> Fresh and delightful</li>
-            </ul>
-        </section>
-        <section id="about" class="about">
-            <h2>About Us</h2>
-            <p>The Pink Lake Café is located near the beautiful Alviso salt ponds, known for their stunning pink hues. We bring the charm of this natural wonder into our café experience.</p>
-        </section>
-        <section id="contact" class="contact">
-            <h2>Contact Us</h2>
-            <p>Visit us at 1044 Catherine St, Alviso, CA.</p>
-            <p>Email: info@pinklakecafe.com | Phone: (555) 123-4567</p>
-            <p><a href="https://www.google.com/maps?q=1044+Catherine+St,+Alviso,+CA" target="_blank">Find us on the map</a></p>
-        </section>
-    </main>
-    <footer class="footer">
-        <p>© 2024 The Pink Lake Café. All rights reserved.</p>
-    </footer>
+    <div class="container">
+        <h1>Coming Soon</h1>
+        <p>We're working hard to launch something amazing. Stay tuned!</p>
+    </div>
 </body>
 </html>
+
