--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: linear-gradient(135deg, #00bcd4, #4a148c);
+            background: linear-gradient(135deg, #ff69b4, #4a148c);
             font-family: 'Arial', sans-serif;
             color: #ffffff;
             text-align: center;
@@ -44,4 +44,5 @@
     </div>
 </body>
 </html>
+
 
